<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BestTeamUnova"
    android:background="@drawable/unovabg">

    <Button
        android:id="@+id/SEButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/EMButton"
        android:text="@string/snivy" />

    <Button
        android:id="@+id/EMButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/tepig" />

    <Button
        android:id="@+id/SAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EMButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/oshawott" />

</RelativeLayout>