<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BestTeamHoenn"
    android:background="@drawable/hoennbg">

    <Button
        android:id="@+id/SCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/BLButton"
        android:text="@string/treecko" />

    <Button
        android:id="@+id/BLButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/torchic" />

    <Button
        android:id="@+id/SWButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BLButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/mudkip" />


</RelativeLayout>