<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/homebg">

    <Button
        android:id="@+id/BTHButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/bestteams"
        android:layout_above="@id/MPButton"/>

    <Button
        android:id="@+id/MPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/missingpokemon" />

    <Button
        android:id="@+id/G4SBuuton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MPButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/gen4shineis" />

</RelativeLayout>